[gd_scene load_steps=7 format=3 uid="uid://dyixyijq632ky"]

[ext_resource type="Script" path="res://scripts/items/teapot.gd" id="1_0wn6h"]

[sub_resource type="BoxMesh" id="BoxMesh_axynv"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6igxj"]
albedo_color = Color(0, 0.619822, 0.619822, 1)

[sub_resource type="BoxMesh" id="BoxMesh_7fk7a"]
material = SubResource("StandardMaterial3D_6igxj")
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8bapl"]
albedo_color = Color(1, 0.369297, 0.518888, 1)

[sub_resource type="BoxMesh" id="BoxMesh_1awov"]
material = SubResource("StandardMaterial3D_8bapl")
size = Vector3(0.5, 0.5, 0.5)

[node name="Teapot" type="Node3D"]
script = ExtResource("1_0wn6h")

[node name="EmptyMesh" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
mesh = SubResource("BoxMesh_axynv")

[node name="ColdWaterMesh" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
visible = false
mesh = SubResource("BoxMesh_7fk7a")

[node name="BoilingWaterMesh" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
visible = false
mesh = SubResource("BoxMesh_1awov")
